--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "antd": "^5.2.1",
     "bootstrap": "^5.2.3",
     "dayjs": "^1.11.7",
     "embla-carousel-react": "^7.0.9",
